# kpcn

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  kitti_registration.py  plot_convergance.py  test_kitti.py  test_model.py  train_ShapeNetBenchmark2048.py  train_ShapeNetV1.py  visualize_deformations.py  visualize_features.py
cpp_wrappers/cpp_subsampling/: setup.py
cpp_wrappers/cpp_utils/cloud/: cloud.h
data/shapenetV1/: one_model.list  test_novel.list  train.list
datasets/: ShapeNetBenchmark2048.py  ShapeNetV1.py  common.py  kitti.py
kernels/: convolution_ops.py  kernel_points.py
models/: KPCN_model.py  network_blocks.py
pc_distance/: makefile  tf_approxmatch.cpp
preprocess/: README.md  preprocess_complete_pc.py  preprocess_partial_pc.py
preprocess/render/: README.md  __init__.py  process_exr.py  render_depth.py
preprocess/sample/: CMakeLists.txt  README.md  mesh_sampling.cpp
tf_custom_ops/: compile_op.sh
utils/: common.py  config.py  data.py  metrics.py  ply.py  tester.py  trainer.py  visualizer.py  workspace.py
